--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
+    "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "~5.8.10",
-    "@react-navigation/stack": "~5.12.8",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
     "expo-asset": "~8.2.1",
     "expo-constants": "~9.3.0",
@@ -28,11 +30,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.2",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-unimodules": "^0.12.0",
     "react-native-web": "~0.13.12"
