--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
+    "react-native-shadow-cards": "^1.0.2",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-unimodules": "^0.12.0",
     "react-native-web": "~0.13.12"
